Commit of all Files

--- a/discrete_hmm.ipynb
+++ b/discrete_hmm.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "f7f11f97",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "1d581b87",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "d1f7c052",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,9 @@
     "        Notes:\n",
     "            You may not need all of the inputs.\n",
     "        \"\"\"\n",
-    "        return alpha_hat * beta_hat\n",
+    "        gamma = alpha_hat * beta_hat             \n",
+    "        gamma /= np.sum(gamma, axis=1, keepdims=True)\n",
+    "        return gamma \n",
     "\n",
     "    def log_p_sequence_xt(self, observations: np.ndarray, latent_sequence: np.ndarray) -> float:\n",
     "        \"\"\"Log likelihood of the sequence given the data p(z_{1:T}|x_{1:T}).\n",
@@ -309,8 +311,9 @@
     "        for t in range(len(observations)):   \n",
     "            z_prev = sequence_indices[t]\n",
     "            z_curr = sequence_indices[t+1]\n",
-    "            log_probability += np.log(self.transition_matrix[z_prev, z_curr])\n",
-    "            log_probability += np.log(observation_probability(z_curr, observations[t]))\n",
+    "            eps = 1e-12\n",
+    "            log_probability += np.log(self.transition_matrix[z_prev, z_curr] + eps)\n",
+    "            log_probability += np.log(observation_probability(z_curr, observations[t]) + eps)\n",
     "\n",
     "        return log_probability\n",
     "\n",
@@ -338,7 +341,8 @@
     "\n",
     "                # Let's find the best path to this state\n",
     "                m_matrix[t,i] = best_prev\n",
-    "                w_matrix[t+1,i] = scores_from_prev[best_prev] + np.log(observation_probability(i, observations[t]))\n",
+    "                eps = 1e-12\n",
+    "                w_matrix[t+1,i] = scores_from_prev[best_prev] + np.log(observation_probability(i, observations[t]) + eps)\n",
     "\n",
     "        # Now we can work backwards to find the most likely path.\n",
     "        map_z_path = np.ones(len(observations)+1, dtype=int) * -1 \n",
@@ -368,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "76805452",
    "metadata": {},
    "outputs": [
@@ -376,7 +380,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6723/3632381753.py:174: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_6723/589174362.py:177: RuntimeWarning: divide by zero encountered in log\n",
       "  scores_from_prev = w_matrix[t] + np.log(self.transition_matrix[:, i])\n"
      ]
     }
@@ -490,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "747e688d",
    "metadata": {},
    "outputs": [
@@ -498,7 +502,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6723/3632381753.py:174: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_6723/589174362.py:177: RuntimeWarning: divide by zero encountered in log\n",
       "  scores_from_prev = w_matrix[t] + np.log(self.transition_matrix[:, i])\n"
      ]
     },
@@ -576,25 +580,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "547be7b7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_6723/3632381753.py:150: RuntimeWarning: divide by zero encountered in log\n",
-      "  log_probability += np.log(self.transition_matrix[z_prev, z_curr])\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log probability of argmax_k p(z_t,k|x_1:t): -inf\n",
-      "Log probability of argmax_k p(z_t,k|x_1:T): -2525.4236434134336\n",
-      "Log probability of argmax_(z_1:T) p(z_t|x_1:t): -2514.121012618777\n"
+      "Log probability of argmax_k p(z_t,k|x_1:t): -2795.802173580815\n",
+      "Log probability of argmax_k p(z_t,k|x_1:T): -2525.4236433318074\n",
+      "Log probability of argmax_(z_1:T) p(z_t|x_1:t): -2514.121012536541\n"
      ]
     }
    ],
